@@ -8,22 +8,6 @@
 
 #include"pcolorer.h"
 
-struct color{
-  union{
-    struct{
-      unsigned int cfg : 4;
-      unsigned int cbk : 4;
-    };
-    int concolor : 32;
-    struct{
-      unsigned int fg :24;
-      unsigned int bk :24;
-      int style;
-    };
-  };
-  color(): concolor(0), fg(0), bk(0), style(0) {};
-};
-
 const int CurrentEditor = -1;
 const DString DDefaultScheme=DString("default");
 const DString DShowCross=DString("show-cross");
@@ -141,7 +125,7 @@ private:
   int drawCross;//0 - off,  1 - always, 2 - if included in the scheme
   bool showVerticalCross, showHorizontalCross;
   int crossZOrder;
-  color horzCrossColor, vertCrossColor;
+  FarColor horzCrossColor, vertCrossColor;
 
   bool drawPairs, drawSyntax;
   bool oldOutline;
@@ -167,11 +151,11 @@ private:
 
   void reloadTypeSettings();
   void enterHandler();
-  color convert(const StyledRegion *rd);
-  bool foreDefault(color col);
-  bool backDefault(color col);
+  FarColor convert(const StyledRegion *rd);
+  bool foreDefault(FarColor col);
+  bool backDefault(FarColor col);
   void showOutliner(Outliner *outliner);
-  void addFARColor(int lno, int s, int e, color col);
+  void addFARColor(int lno, int s, int e, FarColor col);
   void deleteFarColor(int lno, int s);
   const wchar_t *GetMsg(int msg);
 };
