@@ -1,6 +1,10 @@
 ﻿$Revision$
 	$Author$ $Date$
-	1. начало переделки родного truemode на фаровский
+	1. продолжаем переделку truemod
+
+#Revision: 1768
+	#Author: ctapmex Date: 2011-08-03 22:57:28 +0600 (Ср, 03 авг 2011)
+	1. начало переделки родного truemod на фаровский
 
 #Revision: 1766
 	#Author: ctapmex Date: 2011-08-03 11:27:41 +0600 (Ср, 03 авг 2011)
